regression/reference/error/pyerrormodule.hpp
// pyerrormodule.hpp
// This file is generated by Shroud nowrite-version. Do not edit.
// Copyright (c) 2017-2025, Lawrence Livermore National Security, LLC and
// other Shroud Project Developers.
// See the top-level COPYRIGHT file for details.
//
// SPDX-License-Identifier: (BSD-3-Clause)
//
#ifndef PYERRORMODULE_HPP
#define PYERRORMODULE_HPP

#include <Python.h>

// cxx_header
#include "error.hpp"

// splicer begin header.include
// splicer end header.include

// splicer begin header.C_declaration
// splicer end header.C_declaration

extern PyObject *PY_error_obj;

#if PY_MAJOR_VERSION >= 3
extern "C" PyMODINIT_FUNC PyInit_error(void);
#else
extern "C" PyMODINIT_FUNC initerror(void);
#endif

#endif  /* PYERRORMODULE_HPP */
